--- a/nextpage.html
+++ b/nextpage.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #c2e0e7;
         }
         .question {
             margin-bottom: 20px;
@@ -47,7 +48,7 @@
 
         <!-- 問題 4 -->
         <div class="question">
-            <p>4. 以下何者不是漢頓喜歡的食物？</p>
+            <p>4. 以下何者<strong>不是</strong>漢頓喜歡的食物？</p>
             <input type="radio" name="q4" value="A"> 蝦味仙貝<br>
             <input type="radio" name="q4" value="B"> 章魚<br>
             <input type="radio" name="q4" value="C"> 涼麵
