--- a/nextpage.html
+++ b/nextpage.html
@@ -14,7 +14,7 @@
             margin-bottom: 20px;
         }
         .result {
-            margin-top: 40px;
+            margin-top: 20px;
             font-weight: bold;
         }
     </style>
@@ -92,7 +92,7 @@
 
             // 顯示結果
             const resultDiv = document.getElementById('result');
-            resultDiv.textContent = `你答對了 ${score} 題！`;
+            resultDiv.textContent = <h3>`你答對了 ${score} 題！`</h3>;
         }
     </script>
 </body>
