--- a/nextpage.html
+++ b/nextpage.html
@@ -64,7 +64,7 @@
         </div>
 
         <button type="button" style="padding: 10px 20px; background-color: #93cad0; color: white; 
-            text-align: center; text-decoration: none; display: inline-block; border-radius: 4px;" 
+            text-align: center; text-decoration: none; display: inline-block;outline: none; border:none; border-radius: 4px;" 
             onclick="calculateScore()">提交測驗</button>
     </form>
 
